--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </main>
 
     <footer>
-        <p>Site Criado por <strong>Brendon Oliveira</strong></p>
+        <p>Site Criado por <strong>  <a href="https://github.com/DevBrendonOliveira69" target="_blank">Brendon Oliveira</a></strong></p>
 
     </footer>
 </body>
