--- a/Playstation-1.html
+++ b/Playstation-1.html
@@ -65,7 +65,7 @@
         </article>
     </main>
     <footer>
-        <p>Site Criado por <strong>Brendon Oliveira</strong></p>
+        <p>Site Criado por <strong>  <a href="https://github.com/DevBrendonOliveira69" target="_blank">Brendon Oliveira</a></strong></p>
 
     </footer>
 </body>
